--- a/Louron Sandbox/Louron Sandbox.vcxproj.filters
+++ b/Louron Sandbox/Louron Sandbox.vcxproj.filters
@@ -28,13 +28,18 @@
     <None Include="assets\Shaders\Basic\basic_texture.glsl" />
     <None Include="assets\Shaders\Basic\basic_phong.glsl" />
     <None Include="assets\Shaders\Basic\basic.glsl" />
-    <None Include="assets\Models\Ship\Ship.fbx" />
     <None Include="assets\Models\Monkey\Monkey.fbx" />
     <None Include="assets\Models\BackPack\BackPack.fbx" />
     <None Include="assimp-vc143-mt.dll" />
     <None Include="assimp-vc143-mtd.dll" />
     <None Include="assets\Shaders\Forward+\FP_Material_Shader.glsl" />
     <None Include="assets\Shaders\Forward+\FP_Light_Culling.comp" />
+    <None Include="assets\Shaders\Default Shader.glsl" />
+    <None Include="assets\Shaders\Forward+\FP_Depth.glsl" />
+    <None Include="assets\Models\Monkey\Pink_Monkey.fbx" />
+    <None Include="assets\Models\Cube\Cube.fbx" />
+    <None Include="assets\Shaders\Forward+\FP_Material_BP_Shader.glsl" />
+    <None Include="assets\Shaders\Forward+\FP_Material_PBR_Shader.glsl" />
   </ItemGroup>
   <ItemGroup>
     <Image Include="assets\Models\BackPack\backpack_specular.jpg">
