--- a/Louron Core/Louron Core.vcxproj.filters
+++ b/Louron Core/Louron Core.vcxproj.filters
@@ -120,12 +120,6 @@
     <ClCompile Include="src\Renderer\RendererPipeline.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="src\Debug\Profiler.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
-    <ClCompile Include="src\Core\Audio.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\OpenGL\Buffer.h">
@@ -504,6 +498,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="src\Core\Audio.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="src\Debug\Assert.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
