Project and Scene Serialization #1
- Core -

Implemented YAML-CPP library.

Declared Project Serializer and Project classes. WIP.

Implemented Scene Serializer class.

Updated Assert console log.

Implemented HasEntity check to Scene to ensure that entities are valid before performing work on them.

Updated Forward+ pipeline to ensure that check is done for camera before rendering, if not, just clear buffers.

Added Get methods for Camera class for Yaw and Pitch for serialization.

Added filepath to MeshRenderer objects for serialization.

Removed Forward+ rendering startup from Scene.

Implemented Scene Config struct for Scene class.

- Sandbox -

Updated base class name for sandbox scenes to Test Scene.

Implemented serialization for Scene 12.

--- a/Louron Sandbox/Louron Sandbox.vcxproj.filters
+++ b/Louron Sandbox/Louron Sandbox.vcxproj.filters
@@ -97,5 +97,8 @@
     <ClInclude Include="source\Sandbox Layer\Test Projects\Scene 11.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="source\Sandbox Layer\Test Projects\Scene 12.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
