--- a/Louron Core/Louron Core.vcxproj
+++ b/Louron Core/Louron Core.vcxproj
@@ -118,13 +118,16 @@
     <ClCompile Include="src\Core\Input.cpp" />
     <ClCompile Include="src\Core\LayerStack.cpp" />
     <ClCompile Include="src\Core\Window.cpp" />
+    <ClCompile Include="src\Project\Project Serializer.cpp" />
     <ClCompile Include="src\Renderer\Renderer.cpp" />
     <ClCompile Include="src\Renderer\RendererPipeline.cpp" />
     <ClCompile Include="src\Scene\Components.cpp" />
     <ClCompile Include="src\Scene\Mesh.cpp" />
     <ClCompile Include="src\Scene\Camera.cpp" />
     <ClCompile Include="src\Scene\Entity.cpp" />
+    <ClCompile Include="src\Project\Project.cpp" />
     <ClCompile Include="src\Scene\Resource Manager.cpp" />
+    <ClCompile Include="src\Scene\Scene Serializer.cpp" />
     <ClCompile Include="src\Scene\Scene.cpp" />
     <ClCompile Include="src\OpenGL\Shader.cpp" />
     <ClCompile Include="src\OpenGL\Texture.cpp" />
@@ -234,6 +237,8 @@
     <ClInclude Include="src\Debug\Profiler.h" />
     <ClInclude Include="src\Louron.h" />
     <ClInclude Include="src\OpenGL\Buffer.h" />
+    <ClInclude Include="src\Project\Project Serializer.h" />
+    <ClInclude Include="src\Project\Project.h" />
     <ClInclude Include="src\Renderer\Renderer.h" />
     <ClInclude Include="src\Renderer\RendererPipeline.h" />
     <ClInclude Include="src\Scene\Light.h" />
@@ -245,6 +250,7 @@
     <ClInclude Include="src\Scene\Entity.h" />
     <ClInclude Include="src\OpenGL\Texture.h" />
     <ClInclude Include="src\Scene\Resource Manager.h" />
+    <ClInclude Include="src\Scene\Scene Serializer.h" />
     <ClInclude Include="src\Scene\Scene.h" />
     <ClInclude Include="src\Core\Input.h" />
     <ClInclude Include="src\OpenGL\Shader.h" />
