Custom Collision Callback, Render FBO, Mouse Picking, and Audio Changes
- Louron Core -

Implemented system for custom collision callbacks. This is so that for each shape, you can define a custom callback which is called when that shape collides with something else. Each individual instance of a component collider can have it's own custom callback functionality.

Updated physics logic so that when you apply a force or torque it checks if the scene is currently processing physics simulations. If it is processing physics changes, then we queue the force or torque to be applied next frame. This is for when using multi threaded callbacks that may be called when the scene is simulating physics.

Implemented FBO logic into Forward+ rendering pipeline class. This means that the colour and depth passes are rendered into the FBO opposed to the direct opengl back buffer.

Implemented entity picking texture into FBO. This means that each render pass the entity UUID will be entered into a texture which hold a uint32_t (unsigned int) for each pixel in the screen. We can then query this to gather what entity is at what pixel on the screen, e.g., you pass the x,y for the mouse position when you click, and it returns the UUID of the entity at that location.

Changed UUID from uint64_t to uint32_t as OpenGL may not support 64 bit integers depending on the system. This is to ensure mouse picking works.

Removed IRRKLANG audio library as this was too big for current requirements. We only need something small at the moment which can be statically linked into the Engine library without the need for a shared dll library.

Implemented miniaudio library to replace IRRKLANG.

Updated Camera code so that the ViewMatrix processes whenever there are changes to the camera properties.

Updated ShaderLibrary constructor so that it automatically finds default shader, and updated Engine so that it finds all glsl and comp files within local and recursive directories from the current exectuable path 

--- a/Louron Sandbox/Louron Sandbox.vcxproj
+++ b/Louron Sandbox/Louron Sandbox.vcxproj
@@ -46,13 +46,13 @@
   <PropertyGroup Label="UserMacros" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
     <IncludePath>$(SolutionDir)\Louron Core\include\physx;$(ProjectDir)\include;$(VC_IncludePath);$(WindowsSDK_IncludePath)</IncludePath>
-    <LibraryPath>$(SolutionDir)\Louron Core\libs\assimp;$(SolutionDir)\Louron Core\libs\glad;$(SolutionDir)\Louron Core\libs\glfw;$(SolutionDir)\Louron Core\libs\irrklang;$(SolutionDir)\Louron Core\libs\physx;$(SolutionDir)\Louron Core\libs\spdlog;$(SolutionDir)\Louron Core\libs\yaml-cpp;$(ProjectDir)\libs;$(VC_LibraryPath_x64);$(WindowsSDK_LibraryPath_x64);</LibraryPath>
+    <LibraryPath>$(SolutionDir)\Louron Core\libs\assimp;$(SolutionDir)\Louron Core\libs\glad;$(SolutionDir)\Louron Core\libs\glfw;$(SolutionDir)\Louron Core\libs\physx;$(SolutionDir)\Louron Core\libs\spdlog;$(SolutionDir)\Louron Core\libs\yaml-cpp;$(ProjectDir)\libs;$(VC_LibraryPath_x64);$(WindowsSDK_LibraryPath_x64);</LibraryPath>
     <OutDir>$(ProjectDir)\bin\$(Configuration)\$(Platform)\</OutDir>
     <IntDir>$(ProjectDir)\bin\$(Configuration)\$(Platform)\Intermediaries\</IntDir>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
     <IncludePath>$(SolutionDir)\Louron Core\include\physx;$(ProjectDir)\include;$(VC_IncludePath);$(WindowsSDK_IncludePath)</IncludePath>
-    <LibraryPath>$(SolutionDir)\Louron Core\libs\assimp;$(SolutionDir)\Louron Core\libs\glad;$(SolutionDir)\Louron Core\libs\glfw;$(SolutionDir)\Louron Core\libs\irrklang;$(SolutionDir)\Louron Core\libs\physx;$(SolutionDir)\Louron Core\libs\spdlog;$(SolutionDir)\Louron Core\libs\yaml-cpp;$(ProjectDir)\libs;$(VC_LibraryPath_x64);$(WindowsSDK_LibraryPath_x64);</LibraryPath>
+    <LibraryPath>$(SolutionDir)\Louron Core\libs\assimp;$(SolutionDir)\Louron Core\libs\glad;$(SolutionDir)\Louron Core\libs\glfw;$(SolutionDir)\Louron Core\libs\physx;$(SolutionDir)\Louron Core\libs\spdlog;$(SolutionDir)\Louron Core\libs\yaml-cpp;$(ProjectDir)\libs;$(VC_LibraryPath_x64);$(WindowsSDK_LibraryPath_x64);</LibraryPath>
     <OutDir>$(ProjectDir)\bin\$(Configuration)\$(Platform)\</OutDir>
     <IntDir>$(ProjectDir)\bin\$(Configuration)\$(Platform)\Intermediaries\</IntDir>
   </PropertyGroup>
@@ -69,9 +69,9 @@
       <RuntimeLibrary>MultiThreadedDebugDLL</RuntimeLibrary>
     </ClCompile>
     <Link>
-      <SubSystem>Console</SubSystem>
+      <SubSystem>NotSet</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalDependencies>assimp-vc143-mtd.lib;glfw3.lib;opengl32.lib;irrklang.lib;yaml-cppd.lib;spdlogd.lib;debug\PhysX_static_64.lib;debug\PhysXCharacterKinematic_static_64.lib;debug\PhysXCommon_static_64.lib;debug\PhysXCooking_static_64.lib;debug\PhysXExtensions_static_64.lib;debug\PhysXFoundation_static_64.lib;debug\PhysXPvdSDK_static_64.lib;debug\PhysXVehicle_static_64.lib;debug\PhysXVehicle2_static_64.lib;$(CoreLibraryDependencies);%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>assimp-vc143-mtd.lib;glfw3.lib;opengl32.lib;yaml-cppd.lib;spdlogd.lib;debug\PhysX_static_64.lib;debug\PhysXCharacterKinematic_static_64.lib;debug\PhysXCommon_static_64.lib;debug\PhysXCooking_static_64.lib;debug\PhysXExtensions_static_64.lib;debug\PhysXFoundation_static_64.lib;debug\PhysXPvdSDK_static_64.lib;debug\PhysXVehicle_static_64.lib;debug\PhysXVehicle2_static_64.lib;$(CoreLibraryDependencies);%(AdditionalDependencies)</AdditionalDependencies>
       <Profile>
       </Profile>
       <IgnoreSpecificDefaultLibraries>MSVCRT</IgnoreSpecificDefaultLibraries>
@@ -92,11 +92,11 @@
       </DisableSpecificWarnings>
     </ClCompile>
     <Link>
-      <SubSystem>Console</SubSystem>
+      <SubSystem>NotSet</SubSystem>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalDependencies>assimp-vc143-mt.lib;glfw3.lib;opengl32.lib;irrklang.lib;yaml-cpp.lib;spdlog.lib;release\PhysX_static_64.lib;release\PhysXCharacterKinematic_static_64.lib;release\PhysXCommon_static_64.lib;release\PhysXCooking_static_64.lib;release\PhysXExtensions_static_64.lib;release\PhysXFoundation_static_64.lib;release\PhysXPvdSDK_static_64.lib;release\PhysXVehicle_static_64.lib;release\PhysXVehicle2_static_64.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>assimp-vc143-mt.lib;glfw3.lib;opengl32.lib;yaml-cpp.lib;spdlog.lib;release\PhysX_static_64.lib;release\PhysXCharacterKinematic_static_64.lib;release\PhysXCommon_static_64.lib;release\PhysXCooking_static_64.lib;release\PhysXExtensions_static_64.lib;release\PhysXFoundation_static_64.lib;release\PhysXPvdSDK_static_64.lib;release\PhysXVehicle_static_64.lib;release\PhysXVehicle2_static_64.lib;%(AdditionalDependencies)</AdditionalDependencies>
       <Profile>
       </Profile>
       <AdditionalOptions>/ignore:4006,4099</AdditionalOptions>
@@ -130,9 +130,6 @@
     <None Include="assimp-vc143-mtd.dll">
       <FileType>Document</FileType>
     </None>
-    <None Include="ikpFlac.dll" />
-    <None Include="ikpMP3.dll" />
-    <None Include="irrKlang.dll" />
   </ItemGroup>
   <ItemGroup>
     <Image Include="assets\Images\cube_texture.png" />
