--- a/Louron Core/Louron Core.vcxproj
+++ b/Louron Core/Louron Core.vcxproj
@@ -47,14 +47,14 @@
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
     <LinkIncremental>true</LinkIncremental>
     <IncludePath>$(ProjectDir)\include\physx;$(ProjectDir)\include;$(IncludePath)</IncludePath>
-    <LibraryPath>$(ProjectDir)\libs\assimp;$(ProjectDir)\libs\glad;$(ProjectDir)\libs\glfw;$(ProjectDir)\libs\physx;$(ProjectDir)\libs\spdlog;$(ProjectDir)\libs\irrklang;$(ProjectDir)\libs\yaml-cpp;$(ProjectDir)\libs;$(LibraryPath)</LibraryPath>
+    <LibraryPath>$(ProjectDir)\libs\assimp;$(ProjectDir)\libs\glad;$(ProjectDir)\libs\glfw;$(ProjectDir)\libs\physx;$(ProjectDir)\libs\spdlog;$(ProjectDir)\libs\yaml-cpp;$(ProjectDir)\libs;$(LibraryPath)</LibraryPath>
     <OutDir>$(ProjectDir)\bin\$(Configuration)\$(Platform)\</OutDir>
     <IntDir>$(ProjectDir)\bin\$(Configuration)\$(Platform)\Intermediates\</IntDir>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
     <LinkIncremental>false</LinkIncremental>
     <IncludePath>$(ProjectDir)\include\physx;$(ProjectDir)\include;$(IncludePath)</IncludePath>
-    <LibraryPath>$(ProjectDir)\libs\assimp;$(ProjectDir)\libs\glad;$(ProjectDir)\libs\glfw;$(ProjectDir)\libs\physx;$(ProjectDir)\libs\spdlog;$(ProjectDir)\libs\irrklang;$(ProjectDir)\libs\yaml-cpp;$(ProjectDir)\libs;$(LibraryPath)</LibraryPath>
+    <LibraryPath>$(ProjectDir)\libs\assimp;$(ProjectDir)\libs\glad;$(ProjectDir)\libs\glfw;$(ProjectDir)\libs\physx;$(ProjectDir)\libs\spdlog;$(ProjectDir)\libs\yaml-cpp;$(ProjectDir)\libs;$(LibraryPath)</LibraryPath>
     <OutDir>$(ProjectDir)\bin\$(Configuration)\$(Platform)\</OutDir>
     <IntDir>$(ProjectDir)\bin\$(Configuration)\$(Platform)\Intermediates\</IntDir>
   </PropertyGroup>
@@ -123,6 +123,7 @@
     <ClCompile Include="include\imgui\imgui_impl_opengl3.cpp" />
     <ClCompile Include="include\imgui\imgui_widgets.cpp" />
     <ClCompile Include="libs\glad\glad.c" />
+    <ClCompile Include="src\Core\Audio.cpp" />
     <ClCompile Include="src\Core\Engine.cpp" />
     <ClCompile Include="src\Core\GuiLayer.cpp" />
     <ClCompile Include="src\Core\Input.cpp" />
@@ -137,6 +138,7 @@
     <ClCompile Include="src\Scene\Components\Components.cpp" />
     <ClCompile Include="src\Scene\Components\Mesh.cpp" />
     <ClCompile Include="src\Scene\Components\Camera.cpp" />
+    <ClCompile Include="src\Scene\Components\Physics\CollisionCallback.cpp" />
     <ClCompile Include="src\Scene\Components\Physics\PhysicsWrappers.cpp" />
     <ClCompile Include="src\Scene\Components\Physics\Rigidbody.cpp" />
     <ClCompile Include="src\Scene\Entity.cpp" />
@@ -537,27 +539,6 @@
     <ClInclude Include="include\imgui\imstb_rectpack.h" />
     <ClInclude Include="include\imgui\imstb_textedit.h" />
     <ClInclude Include="include\imgui\imstb_truetype.h" />
-    <ClInclude Include="include\irrklang\ik_ESoundEngineOptions.h" />
-    <ClInclude Include="include\irrklang\ik_ESoundOutputDrivers.h" />
-    <ClInclude Include="include\irrklang\ik_EStreamModes.h" />
-    <ClInclude Include="include\irrklang\ik_IAudioRecorder.h" />
-    <ClInclude Include="include\irrklang\ik_IAudioStream.h" />
-    <ClInclude Include="include\irrklang\ik_IAudioStreamLoader.h" />
-    <ClInclude Include="include\irrklang\ik_IFileFactory.h" />
-    <ClInclude Include="include\irrklang\ik_IFileReader.h" />
-    <ClInclude Include="include\irrklang\ik_IRefCounted.h" />
-    <ClInclude Include="include\irrklang\ik_irrKlangTypes.h" />
-    <ClInclude Include="include\irrklang\ik_ISound.h" />
-    <ClInclude Include="include\irrklang\ik_ISoundDeviceList.h" />
-    <ClInclude Include="include\irrklang\ik_ISoundEffectControl.h" />
-    <ClInclude Include="include\irrklang\ik_ISoundEngine.h" />
-    <ClInclude Include="include\irrklang\ik_ISoundMixedOutputReceiver.h" />
-    <ClInclude Include="include\irrklang\ik_ISoundSource.h" />
-    <ClInclude Include="include\irrklang\ik_ISoundStopEventReceiver.h" />
-    <ClInclude Include="include\irrklang\ik_IVirtualRefCounted.h" />
-    <ClInclude Include="include\irrklang\ik_SAudioStreamFormat.h" />
-    <ClInclude Include="include\irrklang\ik_vec3d.h" />
-    <ClInclude Include="include\irrklang\irrKlang.h" />
     <ClInclude Include="include\khr\khrplatform.h" />
     <ClInclude Include="include\physx\characterkinematic\PxBoxController.h" />
     <ClInclude Include="include\physx\characterkinematic\PxCapsuleController.h" />
@@ -1083,6 +1064,7 @@
     <ClInclude Include="src\Renderer\Renderer.h" />
     <ClInclude Include="src\Renderer\RendererPipeline.h" />
     <ClInclude Include="src\Scene\Components\Physics\Collider.h" />
+    <ClInclude Include="src\Scene\Components\Physics\CollisionCallback.h" />
     <ClInclude Include="src\Scene\Components\Physics\PhysicsWrappers.h" />
     <ClInclude Include="src\Scene\Components\Physics\Rigidbody.h" />
     <ClInclude Include="src\Scene\Components\Skybox.h" />
