--- a/Louron Sandbox/Louron Sandbox.vcxproj
+++ b/Louron Sandbox/Louron Sandbox.vcxproj
@@ -146,6 +146,7 @@
     <ClInclude Include="source\Sandbox Layer\Test Projects\Scene 12.h" />
     <ClInclude Include="source\Sandbox Layer\Test Projects\Scene 13.h" />
     <ClInclude Include="source\Sandbox Layer\Test Projects\Scene 14.h" />
+    <ClInclude Include="source\Sandbox Layer\Test Projects\Scene 15.h" />
     <ClInclude Include="source\Sandbox Layer\Test Projects\Scene 2.h" />
     <ClInclude Include="source\Sandbox Layer\Test Projects\Scene 3.h" />
     <ClInclude Include="source\Sandbox Layer\Test Projects\Scene 4.h" />
