--- a/Louron Sandbox/Louron Sandbox.vcxproj
+++ b/Louron Sandbox/Louron Sandbox.vcxproj
@@ -130,6 +130,7 @@
     <None Include="assimp-vc143-mtd.dll">
       <FileType>Document</FileType>
     </None>
+    <None Include="Sandbox Project\Scenes\PBR Materials.lscene" />
   </ItemGroup>
   <ItemGroup>
     <Image Include="assets\Images\cube_texture.png" />
@@ -147,6 +148,7 @@
     <ClInclude Include="source\Sandbox Layer\Test Projects\Scene 13.h" />
     <ClInclude Include="source\Sandbox Layer\Test Projects\Scene 14.h" />
     <ClInclude Include="source\Sandbox Layer\Test Projects\Scene 15.h" />
+    <ClInclude Include="source\Sandbox Layer\Test Projects\Scene 16.h" />
     <ClInclude Include="source\Sandbox Layer\Test Projects\Scene 2.h" />
     <ClInclude Include="source\Sandbox Layer\Test Projects\Scene 3.h" />
     <ClInclude Include="source\Sandbox Layer\Test Projects\Scene 4.h" />
